Saving favorites dogs

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="container">
             <article>
                 <img src="" id="img0" alt="Random cute doggy">
-                <button>Guardar en favoritos</button>
+                <button id="btn1" onclick="saveFavorite()">Guardar en favoritos</button>
             </article>
             <article>
                 <img src="" id="img1" alt="Random cute doggy">
-                <button>Guardar en favoritos</button>
+                <button id="btn2" onclick="saveFavorite()">Guardar en favoritos</button>
             </article>
         </div>
         <span id="error"></span>
