--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
         <div class="container">
             <article>
                 <img src="" id="img0" alt="Random cute doggy">
-                <button id="btn1" onclick="saveFavorite()">Guardar en favoritos</button>
+                <button id="btn1">Guardar en favoritos</button>
             </article>
             <article>
                 <img src="" id="img1" alt="Random cute doggy">
-                <button id="btn2" onclick="saveFavorite()">Guardar en favoritos</button>
+                <button id="btn2">Guardar en favoritos</button>
             </article>
         </div>
         <span id="error"></span>
         
-        <button id="btn" onclick="fetcher()">Get a new dog</button>
+        <button id="btn" onclick="loadRandom()">Get a new dog</button>
     </section>
     <section id="favoritesDoggies">
+        <h2>My favs doggies</h2>
         <article>
             <img src="" id="img3" alt="Random cute doggy">
-            <button>Guardar en favoritos</button>
+            <button>Unfav</button>
         </article>
     </section>
 
