Deleting favorites dogs

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <div class="container">
             <article>
                 <img src="" id="img0" alt="Random cute doggy">
-                <button id="btn1">Guardar en favoritos</button>
+                <button id="btn1">Save in favs</button>
             </article>
             <article>
                 <img src="" id="img1" alt="Random cute doggy">
-                <button id="btn2">Guardar en favoritos</button>
+                <button id="btn2">Save in favs</button>
             </article>
         </div>
         <span id="error"></span>
         
-        <button id="btn" onclick="loadRandom()">Get a new dog</button>
+        <button id="btn" onclick="loadRandom()">Get a new pair of dogs</button>
     </section>
     <section id="favoritesDoggies">
         <h2>My favs doggies</h2>
