--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         
         <button id="btn" onclick="loadRandom()">Get a new pair of dogs</button>
     </section>
+    <section id="uploadingDoggy">
+        <h2>Upload your doggy pic</h2>
+
+        <form action="" id="uploadingForm">
+            <input type="file" id="file" name="file" />
+            <button type="button" onclick="uploadDoggyPhoto()">Upload pic</button>
+        </form>
+    </section>
     <section id="favoritesDoggies">
         <h2>My favs doggies</h2>
         <article>
