--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </article>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
